# m5mic

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
coreaudio-driver/: Cargo.toml  Info.plist
coreaudio-driver/src/: lib.rs
firmware/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/usb_device_uac/: idf_component.yml
firmware/components/usb_device_uac/tusb/: usb_descriptors.c
firmware/src/: audio.rs  ble.rs  codec.rs  discovery.rs  display.rs  i2c_bus.rs  main.rs  power.rs  setup.rs  usb_audio.rs  wifi_config.rs
ios-core/: Cargo.toml
ios-core/include/: m5mic_ios_core.h
ios-core/src/: lib.rs
ios/Config/: Shared.xcconfig
ios/M5Mic/: AudioMonitor.swift  AudioRecorder.swift  BluetoothModeCommandSender.swift  BluetoothReceiver.swift  ContentView.swift  Info.plist  M5Mic-Bridging-Header.h  M5MicApp.swift  M5MicStore.swift  ModeCommandSender.swift  NetworkAddress.swift  RecordingDestination.swift  RecordingFolderBrowser.swift  RustCore.swift  WiFiReceiver.swift
ios/M5Mic.xcodeproj/: project.pbxproj
ios/M5Mic.xcodeproj/xcshareddata/xcschemes/: M5Mic.xcscheme
ios/M5Mic.xcworkspace/: contents.xcworkspacedata
ios/scripts/: build-rust-ios.sh
preview/: index.html
protocol/: Cargo.toml
protocol/src/: lib.rs
receiver/: Cargo.toml
receiver/src/: lib.rs  main.rs
scripts/: build-coreaudio-driver.sh  build-statusbar-app.sh  export-m5launcher-firmware.sh  install-coreaudio-driver.sh  release-local.sh  uninstall-coreaudio-driver.sh
statusbar/: Cargo.toml  Info.plist
statusbar/src/: ble.rs  main.rs
virtual-mic/: Cargo.toml
virtual-mic/src/: lib.rs
