[package]
name = "m5mic-coreaudio-driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
coreaudio-sys = { version = "0.2.17", default-features = false, features = ["audio_server_plugin", "core_audio"] }
m5mic-virtual-mic = { path = "../virtual-mic" }
