[package]
name = "m5mic-receiver"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3"
hound = "3.5.1"
m5mic-protocol = { path = "../protocol" }
mdns-sd = "0.19.1"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
