[package]
name = "m5mic-statusbar"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
coreaudio-sys = { version = "0.2.17", default-features = false, features = ["core_audio"] }
m5mic-protocol = { path = "../protocol" }
m5mic-receiver = { path = "../receiver" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.24.0", default-features = false }
winit = "0.30.12"
